--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
