--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
