--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.6",
