--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.4.0",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
