--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.8.4",
     "firebase": "^11.5.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.487.0",
     "match-sorter": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-rating-stars-component": "^2.2.0",
