--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.8.4",
     "firebase": "^11.5.0",
+    "framer-motion": "^12.6.3",
     "localforage": "^1.10.0",
     "lucide-react": "^0.487.0",
     "match-sorter": "^8.0.0",
